mise en place gitlab aws pas fonctionelle retouche secrets et salts

--- a/webproject/templates/secrets-db-credentials.yaml
+++ b/webproject/templates/secrets-db-credentials.yaml
@@ -1,22 +1,14 @@
-{{- $name := required "dbCredentials.name must be set" .Values.dbCredentials.name -}}
-{{- $src  := default "file" .Values.dbCredentials.source -}}
-{{- if eq $src "file" -}}
-  {{- $raw := .Files.Get "secrets/db-credentials.yaml" | required "Place your secret at webproject/secrets/db-credentials.yaml (not in Git)" -}}
-  {{- $db  := $raw | fromYaml -}}
-  {{- $wppw := (index $db "wp-password") | default (index $db "password") -}}
+{{- if not .Values.externalSecrets.enabled }}
+{{- $name := ( .Values.dbCredentials.name | default "db-credentials" ) }}
+{{- $ex := (lookup "v1" "Secret" .Release.Namespace $name) }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ $name }}
 type: Opaque
 stringData:
-  username:      {{ required "missing username in secrets/db-credentials.yaml"      (index $db "username")      | quote }}
-  root-password: {{ required "missing root-password in secrets/db-credentials.yaml" (index $db "root-password") | quote }}
-  database:      {{ default "wordpress" (index $db "database") | quote }}
-  # mot de passe applicatif dédié :
-  wp-password:   {{ required "missing wp-password (or fallback 'password') in secrets/db-credentials.yaml" $wppw | quote }}
-{{- else if eq $src "external" -}}
-# secret non géré par ce chart (AWS/ESO)
-{{- else -}}
-{{- fail (printf "Unsupported dbCredentials.source=%s (use file|external)" $src) -}}
-{{- end -}}
+  username:      {{ if $ex }}{{ index $ex.data "username"      | b64dec | quote }}{{ else }}"wp_user"{{ end }}
+  root-password: {{ if $ex }}{{ index $ex.data "root-password" | b64dec | quote }}{{ else }}"change_me_root"{{ end }}
+  database:      {{ if $ex }}{{ index $ex.data "database"      | b64dec | quote }}{{ else }}"wordpress"{{ end }}
+  wp-password:   {{ if $ex }}{{ index $ex.data "wp-password"   | b64dec | quote }}{{ else }}"motdepasse_wp"{{ end }}
+{{- end }}
