--- a/webproject/values.aws.yaml
+++ b/webproject/values.aws.yaml
@@ -16,3 +16,17 @@ ingress:
 # Très important : on ne crée PAS de Certificate K8s (TLS est terminé par l'ALB)
 tls:
   enabled: false
+
+
+externalSecrets:
+  enabled: true
+  region: "us-east-1"   # mets la région EXACTE de ton EKS/ALB/ACM
+
+
+database:
+  host: mydb.cluster-abcdefghij.eu-west-1.rds.amazonaws.com
+  port: 3306
+
+secrets:
+  db:    { name: db-credentials }     # doit matcher externalsecret-db.yaml
+  salts: { name: wordpress-salts }    # doit matcher externalsecret-salts.yaml
