gestion secrets local refonctionnelle post reflexion secrets en variable gitlab

--- a/webproject/templates/externalsecret-db.yaml
+++ b/webproject/templates/externalsecret-db.yaml
@@ -1,4 +1,6 @@
 {{- if .Values.externalSecrets.enabled }}
+{{- $dbSecretName := required "values.secrets.db.name is required (AWS)"           .Values.secrets.db.name }}
+{{- $dbKey       := required "values.externalSecrets.dbKey is required (AWS)"     .Values.externalSecrets.dbKey }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -6,19 +8,17 @@ metadata:
   namespace: default
 spec:
   refreshInterval: 1h
-  secretStoreRef:
-    name: aws-sm
-    kind: SecretStore
+  secretStoreRef: { name: aws-sm, kind: SecretStore }
   target:
-    name: {{ .Values.dbCredentials.name | default "db-credentials" }}
+    name: {{ $dbSecretName }}
     creationPolicy: Owner
   data:
-    - secretKey: username
-      remoteRef: { key: "webproject/db", property: "username" }
+    - secretKey: username      # -> K8s
+      remoteRef: { key: {{ $dbKey | quote }}, property: "username" }
     - secretKey: root-password
-      remoteRef: { key: "webproject/db", property: "root-password" }
+      remoteRef: { key: {{ $dbKey | quote }}, property: "root-password" }
     - secretKey: database
-      remoteRef: { key: "webproject/db", property: "database" }
+      remoteRef: { key: {{ $dbKey | quote }}, property: "database" }
     - secretKey: wp-password
-      remoteRef: { key: "webproject/db", property: "wp-password" }
+      remoteRef: { key: {{ $dbKey | quote }}, property: "wp-password" }
 {{- end }}
