--- a/webproject/templates/externalsecret-salts.yaml
+++ b/webproject/templates/externalsecret-salts.yaml
@@ -1,4 +1,6 @@
 {{- if .Values.externalSecrets.enabled }}
+{{- $saltName := required "values.secrets.salts.name is required (AWS)"          .Values.secrets.salts.name }}
+{{- $saltsKey := required "values.externalSecrets.saltsKey is required (AWS)"    .Values.externalSecrets.saltsKey }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -6,27 +8,17 @@ metadata:
   namespace: default
 spec:
   refreshInterval: 24h
-  secretStoreRef:
-    name: aws-sm
-    kind: SecretStore
+  secretStoreRef: { name: aws-sm, kind: SecretStore }
   target:
-    name: {{ .Values.wordpressSalts.name | default "wordpress-salts" }}
+    name: {{ $saltName }}
     creationPolicy: Owner
   data:
-    - secretKey: AUTH_KEY
-      remoteRef: { key: "webproject/salts", property: "AUTH_KEY" }
-    - secretKey: SECURE_AUTH_KEY
-      remoteRef: { key: "webproject/salts", property: "SECURE_AUTH_KEY" }
-    - secretKey: LOGGED_IN_KEY
-      remoteRef: { key: "webproject/salts", property: "LOGGED_IN_KEY" }
-    - secretKey: NONCE_KEY
-      remoteRef: { key: "webproject/salts", property: "NONCE_KEY" }
-    - secretKey: AUTH_SALT
-      remoteRef: { key: "webproject/salts", property: "AUTH_SALT" }
-    - secretKey: SECURE_AUTH_SALT
-      remoteRef: { key: "webproject/salts", property: "SECURE_AUTH_SALT" }
-    - secretKey: LOGGED_IN_SALT
-      remoteRef: { key: "webproject/salts", property: "LOGGED_IN_SALT" }
-    - secretKey: NONCE_SALT
-      remoteRef: { key: "webproject/salts", property: "NONCE_SALT" }
+    - secretKey: AUTH_KEY         ; remoteRef: { key: {{ $saltsKey | quote }}, property: "AUTH_KEY" }
+    - secretKey: SECURE_AUTH_KEY  ; remoteRef: { key: {{ $saltsKey | quote }}, property: "SECURE_AUTH_KEY" }
+    - secretKey: LOGGED_IN_KEY    ; remoteRef: { key: {{ $saltsKey | quote }}, property: "LOGGED_IN_KEY" }
+    - secretKey: NONCE_KEY        ; remoteRef: { key: {{ $saltsKey | quote }}, property: "NONCE_KEY" }
+    - secretKey: AUTH_SALT        ; remoteRef: { key: {{ $saltsKey | quote }}, property: "AUTH_SALT" }
+    - secretKey: SECURE_AUTH_SALT ; remoteRef: { key: {{ $saltsKey | quote }}, property: "SECURE_AUTH_SALT" }
+    - secretKey: LOGGED_IN_SALT   ; remoteRef: { key: {{ $saltsKey | quote }}, property: "LOGGED_IN_SALT" }
+    - secretKey: NONCE_SALT       ; remoteRef: { key: {{ $saltsKey | quote }}, property: "NONCE_SALT" }
 {{- end }}
