--- a/webproject/templates/secrets-db-credentials.yaml
+++ b/webproject/templates/secrets-db-credentials.yaml
@@ -1,5 +1,5 @@
 {{- if not .Values.externalSecrets.enabled }}
-{{- $name := ( .Values.dbCredentials.name | default "db-credentials" ) }}
+{{- $name := required "values.secrets.db.name is required (local)" .Values.secrets.db.name }}
 {{- $ex := (lookup "v1" "Secret" .Release.Namespace $name) }}
 apiVersion: v1
 kind: Secret
