--- a/webproject/templates/secretstore.yaml
+++ b/webproject/templates/secretstore.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.externalSecrets.enabled }}
+{{- $region := required "values.externalSecrets.region is required when externalSecrets.enabled=true" .Values.externalSecrets.region }}
 apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
@@ -8,7 +9,7 @@ spec:
   provider:
     aws:
       service: SecretsManager
-      region: {{ .Values.externalSecrets.region | quote }}
+      region: {{ $region | quote }}
       auth:
         jwt:
           serviceAccountRef:
