--- a/webproject/values.yaml
+++ b/webproject/values.yaml
@@ -63,7 +63,9 @@ secrets:
 externalSecrets:
   enabled: false
   region: ""   # non use en local
-
+database:
+  host: mariadb-service
+  port: 3306
 
 
 
