--- a/webproject/templates/wordpress-salts.yaml
+++ b/webproject/templates/wordpress-salts.yaml
@@ -1,5 +1,5 @@
 {{- if not .Values.externalSecrets.enabled }}
-{{- $name := ( .Values.wordpressSalts.name | default "wordpress-salts" ) }}
+{{- $name := required "values.secrets.salts.name is required (local)" .Values.secrets.salts.name }}
 {{- $ex := (lookup "v1" "Secret" .Release.Namespace $name) }}
 apiVersion: v1
 kind: Secret
